# jk2mv

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CVARS.rst  README.md  appveyor.yml  changelog.txt
assets/: CMakeLists.txt
assets/fonts/: anewhope_sharp1.fontdat  anewhope_sharp1.tga  anewhope_sharp2.fontdat  anewhope_sharp3.fontdat  anewhope_sharp4.fontdat  ergoec_sharp1.fontdat  ergoec_sharp2.fontdat  ergoec_sharp3.fontdat  ergoec_sharp4.fontdat  ergoec_sharp5.png.pk3  ergoec_sharp5.tga.pk3  ocr_a.tga  ocr_a_sharp1.fontdat  ocr_a_sharp2.fontdat  ocr_a_sharp3.fontdat  ocr_a_sharp3.tga  ocr_a_sharp4.fontdat  ocr_a_sharp4.tga
assets/gfx/2d/: demorec.tga  mplus_1m_bold_mip1.tga
assets/jk2mv/: CMakeLists.txt
assets/jk2mv/fonts/: anewhope.fontdat  anewhope.tga  anewhope_sharp1.fontdat  anewhope_sharp2.fontdat  anewhope_sharp2.tga  anewhope_sharp3.tga  anewhope_sharp4.tga  anewhope_sharp5.fontdat  ergoec_sharp1.fontdat  ergoec_sharp1.tga  ergoec_sharp2.tga  ergoec_sharp3.fontdat  ergoec_sharp3.tga  ergoec_sharp4.tga  ergoec_sharp5.fontdat  ocr_a.fontdat  ocr_a_sharp1.fontdat  ocr_a_sharp1.tga  ocr_a_sharp2.tga  ocr_a_sharp3.fontdat  ocr_a_sharp4.fontdat
assets/jk2mv/gfx/2d/: code_new_roman.tga  code_new_roman_mip1.tga  mplus_1m_bold.tga
assets/jk2mv/strip/: mv.sp
assets/jk2mv/ui/: jk2mpingame.txt
assets/jk2mv/ui/jk2mp/: createserver.menu_patch  ingame_controls.menu_patch  (+2 more)
assets/jk2mv/vm/: jk2mpgame_102.map  jk2mpgame_103.map  jk2mpgame_104.map  ui_103.map
assets/jk2pro/: CMakeLists.txt
assets/shaders/: jk2mv.shader_mv  sabers.dynGlow
assets/strip/: mv.sp
assets/ui/: jk2mpingame.txt
assets/ui/jk2mp/: controls.menu_patch  createserver.menu_patch  ingame_controls.menu_patch  ingame_player.menu_patch  ingame_setup.menu_patch  ingame_setup_modoptions.menu  joinserver.menu_patch  setup.menu_patch
assets/ui/jk2mv/: download_info.menu  download_popup.menu
assets/vm/: cgame_102.map  cgame_103.map  cgame_104.map  ui_102.map  ui_104.map
libs/libpng/: CMakeLists.txt
libs/mongoose/: CMakeLists.txt
libs/mongoose/include/: mongoose.h
libs/zlib/: CMakeLists.txt  gzguts.h
libs/zlib/include/: zconf.h
src/: CMakeLists.txt  mv_setup.h.in
src/api/: mvapi.h  mvmenu.h
src/botlib/: be_aas_bsp.h  be_aas_bspq3.cpp  be_aas_cluster.cpp  be_aas_cluster.h  be_aas_debug.cpp  be_aas_debug.h  be_aas_def.h  be_aas_entity.cpp  be_aas_entity.h  be_aas_file.cpp  be_aas_file.h  be_aas_funcs.h  be_aas_main.cpp  be_aas_main.h  be_aas_move.cpp  be_aas_move.h  be_aas_optimize.cpp  be_aas_optimize.h  be_aas_reach.cpp  be_aas_reach.h  be_aas_route.cpp  be_aas_route.h  be_aas_routealt.cpp  be_aas_routealt.h  be_aas_sample.cpp  be_aas_sample.h  be_ai_char.cpp  be_ai_chat.cpp  be_ai_gen.cpp  be_ai_goal.cpp  be_ai_move.cpp  be_ai_weap.cpp  be_ai_weight.cpp  be_ai_weight.h  be_ea.cpp  be_interface.cpp  be_interface.h  l_crc.cpp  l_libvar.cpp  l_libvar.h  (+11 more)
src/cgame/: cg_local.h  cg_public.h  tr_types.h
src/client/: FXExport.cpp  FXExport.h  FxPrimitives.cpp  FxPrimitives.h  FxScheduler.cpp  FxScheduler.h  FxSystem.cpp  FxSystem.h  FxTemplate.cpp  FxUtil.cpp  FxUtil.h  cl_avi.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_demos_auto.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_net_chan.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  keys.h  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_mp3.cpp  snd_mp3.h  snd_public.h
src/game/: anims.h  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_local.h  bg_misc.c  bg_public.h  bg_weapons.c  bg_weapons.h  botlib.h  g_public.h  q_shared.c  q_shared.h  surfaceflags.h
src/ghoul2/: G2.h  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_local.h  G2_misc.cpp  G2_surfaces.cpp  ghoul2_shared.h
src/menu/: CMakeLists.txt  keycodes.h  menudef.h  q_math.c  q_shared.c  ui_atoms.c  ui_force.c  ui_force.h  ui_gameinfo.c  ui_local.h  ui_main.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c  ui_util.c
src/mp3code/: config.h  csbt.c  csbtl3.c  cupini.c  cupl3.c  cwin.c  cwinm.c  hwin.c  l3.h  l3init.c  mhead.h  mp3struct.h  msis.c  small_header.h  tableawd.h  towave.c  uph.c  upsf.c  wavep.c
src/null/: null_client.cpp  null_glimp.cpp  null_input.cpp  null_snddma.cpp
src/qcommon/: CNetProfile.cpp  GenericParser2.cpp  GenericParser2.h  MiniHeap.h  RoffSystem.cpp  RoffSystem.h  chash.h  cm_load.cpp  cm_local.h  cm_patch.cpp  cm_patch.h  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_shader.cpp  cm_test.cpp  cm_trace.cpp  cmd.cpp  common.cpp  cvar.cpp  disablewarnings.h  files.cpp  game_version.h  game_version.h.in  hstring.cpp  hstring.h  huffman.cpp  ioapi.c  ioapi.h  md4.cpp  msg.cpp  net_chan.cpp  net_http.cpp  net_ip.cpp  q_math.cpp  q_shared.cpp  q_shared.h  qcommon.h  qfiles.h  sstring.h  (+11 more)
src/renderer/: glext.h  matcomp.c  matcomp.h  mdx_format.h  qgl.h  tr_WorldEffects.cpp  tr_WorldEffects.h  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_curve.cpp  tr_flares.cpp  tr_font.cpp  tr_font.h  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_noise.cpp  tr_public.h  tr_quicksprite.cpp  tr_quicksprite.h  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_world.cpp
src/sdl/: sdl_icon.h  sdl_input.cpp  sdl_sound.cpp  sdl_window.cpp
src/server/: server.h  sv_bot.cpp  sv_ccmds.cpp  sv_client.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_net_chan.cpp  sv_snapshot.cpp  sv_world.cpp
src/sys/: con_local.h  con_log.cpp  con_passive.cpp  con_tty.cpp  con_win32.cpp  sys_event.cpp  sys_local.h  sys_main.cpp  sys_public.h  sys_unix.cpp  sys_win32.cpp
src/unix/: sdl_glimp.cpp  sdl_input.cpp  sdl_qgl.h  sdl_snd.cpp  unix_local.h  unix_net.cpp  unix_shared.cpp
src/win32/: dpi_scaling.manifest  glw_win.h  mv.rc  q3asm.asm  resource.h  win_clmain.cpp  win_gamma.cpp  win_glimp.cpp  win_input.cpp  win_local.h  win_net.cpp  win_qgl.cpp  win_shared.cpp  win_snd.cpp  win_syscon.cpp  win_wndproc.cpp
(+161 files in other folders)
